--- a/HealthyCare/HealthyCare/Properties/Resources.resx
+++ b/HealthyCare/HealthyCare/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="doctor_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\doctor-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="healthcare_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\healthcare-background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="home_2_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\home-2-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
